--- a/Source code/company.html
+++ b/Source code/company.html
@@ -63,28 +63,28 @@
        <div class="row">
         <div class=" form-group col-lg-6 col-md-6 col-12">
           <label for="eventName">Event Name</label>
-          <input type="text" name="eventName" id="eventName" class="form-control" required>
+          <input type="text" name="eventName" id="eventName" class="form-control mt-2 mb-2" required>
 
         </div>
         <div class="form-group col-lg-6 col-md-6 col-12">
           <label for="eventDate"> Date of Event</label>
-          <input type="date" name="eventDate" id="eventDate" class="form-control" required>
+          <input type="date" name="eventDate" id="eventDate" class="form-control mt-2 mb-2" required>
         </div>
        </div>
        <div class="row">
          <div class="form-group col-lg-6 col-md-6 col-12">
            <label for="ticketPrice">Ticket Price</label>
-           <input type="number" name="ticketPrice" id="ticketPrice" class="form-control" required>
+           <input type="number" name="ticketPrice" id="ticketPrice" class="form-control mt-2 mb-2" required>
          </div>
          <div class="form-group col-lg-6 col-md-6 col-12">
           <label for="eventLocation">Location</label>
-          <input type="text" name="eventLocation" id="eventLocation" class="form-control" required>
+          <input type="text" name="eventLocation" id="eventLocation" class="form-control mt-2 mb-2" required>
          </div>
        </div>
        <div class="form-group">
          <Section><b>*Upload Image between 350px in width and 170px in height</b></Section>
          <label for="posterimage">Upload Poster</label> <br>
-         <input type="file" name="posterimage" id="posterimage">
+         <input type="file" name="posterimage" id="posterimage" class="form-control mt-2 mb-2">
        </div>
        <div class="row">
          <div class="col-12 d-flex justify-content-center">
@@ -175,6 +175,6 @@
       </div>
   </div>
 
-  
+
 </body>
 </html>
